--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-dom": "^18",
     "sharp": "^0.33.4",
     "tailwind-merge": "^2.2.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "tw-animate-css": "^1.2.9"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.6",
